# testnext

./: .env.example  .gitignore  .trigger-deploy  ADMIN_USER_SETUP_COMPLETE.md  AUDIT_FIX_MEDIUM_REPORT.md  AUDIT_FIX_REPORT.md  BACKUP_V1.0.0_STABLE.md  BLANK_PAGE_FIX_COMPLETE.md  BLANK_PAGE_ROOT_CAUSE.md  COMPLETE_FIX_REPORT.md  CONTRACTS_ADDED.md  DASHBOARD_FIX_COMPLETE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPOSIT_LOOP_FIX_REPORT.md  ENV_VARIABLES_BASE_CHAIN.md  ETHERS_V6_FIX.md  FINAL_INTEGRATION_REPORT.md  FINAL_STATUS_REPORT.md  FRONTEND_INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  METAMASK_CONNECTION_STATUS.md  METAMASK_FIX.md  MIGRATION_SUMMARY.md  PROJECT_STATUS.txt  QUICK_ADD_VAULT_STRATEGY.md  QUICK_REFERENCE.md  README.md  RLS_APPLICATION_REPORT.md  RLS_POLICIES_GUIDE.md  SIDEBAR_COMPLETE.md  SIDEBAR_NAVIGATION_FIX.md  SIDEBAR_PERSISTENT_FIX.md  STATUS_REPORT.md  SUPABASE_FIX_COMPLETE.md  SUPABASE_INTEGRATION_STATUS.md  TESTING_GUIDE.md  TRACKING_FIX_REPORT.md  (+23 more)
backend-supabase/: .env.example  README.md  package.json
blockchain/solana-program/programs/nextblock-satellite/: Cargo.toml
blockchain/solana-program/programs/nextblock-satellite/src/: errors.rs  state.rs
blockchain/solana-program/programs/nextblock-satellite/src/instructions/: deposit.rs
contracts/: DeFiVault.sol  SimpleVault.sol
docs/: COMPLETE_DELIVERY.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SUMMARY.md  INTEGRATION_GUIDE.md  POINTS_SYSTEM_ANALYSIS.md
frontend/: .env.example  README.md
script/: DeployVault.s.sol
src/: App.tsx  (+1 more)
(+167 files in other folders)
