# Author: Anton Carlo Santoro
# Copyright: (c) 2025 Anton Carlo Santoro. All rights reserved.

[package]
name = "nextblock-satellite"
version = "0.1.0"
description = "NextBlock Satellite Program for cross-chain USDC deposits via Circle CCTP"
edition = "2021"
license = "Proprietary"
authors = ["Anton Carlo Santoro"]

[lib]
crate-type = ["cdylib", "lib"]
name = "nextblock_satellite"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.17"

[dev-dependencies]
solana-program-test = "~1.17"
solana-sdk = "~1.17"
